--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
+
+# NetBeans specific #
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+
+# Class Files #
+*.class
+
+#general swap/backup files
+*.so
+*.log
+*.out
+*~
+*.swp
+*.DS_Store
+*.lock
 *.class
 
 # Mobile Tools for Java (J2ME)
